--- a/book.toml
+++ b/book.toml
@@ -1,8 +1,8 @@
 [book]
-authors = ["Sam Schlinkert", "Glenn Sorrentino"]
+authors = ["Glenn Sorrentino"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Hush Line Field Manual"
+title = "Pi Relay Field Manual"
 [output.html]
 additional-css = ["theme/custom.css", "theme/fonts/sans/Atkinson-Hyperlegible-Regular.woff2", "theme/fonts/sans/Atkinson-Hyperlegible-Regular.woff", "theme/fonts/sans/Atkinson-Hyperlegible-Bold.woff2", "theme/fonts/sans/Atkinson-Hyperlegible-Bold.woff"]
